--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,7 @@
 </body>
 
 <script>
-    CreateAlert("Default Example");
+    CreateAlert("Gavin is very smart");
     CreateAlert("Default Example");
     CreateAlert("Default Example", "top");
     CreateAlert("Default Example", "top");
